# pipeline-de-modelos-preditores-de-precos-de-imoveis-com-dados-em-tempo-real

./: .gitignore  AGENTS.md  Fortaleza-CE-2026-dataset-imoveis-geral.csv  README.md  artigo.tex  docker-compose.yml  documento_do_projeto.md  modelagem_busca_bayesiana.ipynb  modelagem_com_analises.ipynb  requirements.txt  tratamento_dados_v1.ipynb  tratamento_imoveis_v2.ipynb
api/: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt  testar_api.ipynb
api/artifacts/: modelo_campeao.pkl
api/artifacts/modelos/1/: catboost.pkl  lightgbm.pkl
api/artifacts/modelos/2/modelos/4/: _campeao_tmp.pkl
api/dataset/: dataset_original.csv
api/src/: pipeline_dados.py  pipeline_modelos.py
api/src/models/: __init__.py  catboost_model.py  lasso_model.py  lightgbm_model.py  mlp_model.py  random_forest_model.py  registry.py  ridge_model.py  svr_model.py  types.py  xgboost_model.py
api/src/utils/: training.py
api/tests/: test_app.py  test_pipeline_dados.py  test_pipeline_modelos.py
dados_tratados/: imoveis_fortaleza_100p.ipynb  tratamento_dados_v1.ipynb  tratamento_imoveis_v2.ipynb  vivareal_live_10k_tratado.csv
docker/postgres/: init.sql
front_end/: .dockerignore  Dockerfile.dev  index.html  package-lock.json  package.json
front_end/src/: App.jsx  styles.css
imov-scraper-v1/: README.md  run_mac.sh
modelos de aprendizagem/: modelagem.ipynb
scraping/: vivareal_scraping.py  zap_scraping.py
specs/: architecture.md  domain.md  product.md  quality.md  verification.md
tratamento de dados/: imoveis_tratado_1.csv  tratamento_imoveis_v2.ipynb
(+53 files in other folders)
